@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_REVISION($Revision: 1.16 $)dnl
+AC_REVISION($Revision: 1.17 $)dnl
 AC_PREREQ(2.50)
 AC_INIT(include/eXosip/eXosip.h)
 
@@ -13,7 +13,7 @@ dnl *********************************************************************
 dnl Source packaging numbers
 EXOSIP_MAJOR_VERSION=0
 EXOSIP_MINOR_VERSION=7
-EXOSIP_MICRO_VERSION=1
+EXOSIP_MICRO_VERSION=2
 
 dnl program extension
 EXOSIP_VERSION=$EXOSIP_MAJOR_VERSION.$EXOSIP_MINOR_VERSION.$EXOSIP_MICRO_VERSION
