@@ -446,6 +446,7 @@ typedef struct eXosip_event {
 
   char                remote_sdp_audio_ip[50];
   int                 remote_sdp_audio_port;
+  int                 local_sdp_audio_port;
   int                 payload;
   char                payload_name[50];
   char                sdp_body[1000]; /* The whole SDP body */
